--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,16 @@
-<h3>User Data</h3>
+
 <div class="text-center" *ngIf="loading">
   <div class="spinner-border" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
-<!-- <div *ngIf="!loading && dataArray.length > 0; else elseBlock">
-  <ul *ngFor="let data of dataArray | paginate: {itemsPerPage: 10, currentPage: p}">
-    <li>{{ data | json}}</li>
-  </ul>
-</div> -->
 <div class="table-container">
   <h3>Posts Table</h3>
   <table *ngIf="!loading && dataArray.length > 0; else elseBlock">
     <tr>
-      <th>User Id | uppercase</th>
-      <th>Id</th>
-      <th>Title</th>
+      <th>{{ 'User Id' | uppercase }}</th>
+      <th>{{ 'Id' | uppercase}}</th>
+      <th>{{ 'Title' | uppercase }}</th>
     </tr>
     <tr *ngFor="let data of dataArray | paginate: {itemsPerPage: 10, currentPage: p}">
       <td>{{data.userId}}</td>
@@ -25,8 +20,11 @@
   </table>
 
 <ng-template #elseBlock>
-  <h3 style="color:red">Some error occured</h3>
-  <p>{{error}}</p>
+  <p>No data available</p>
 </ng-template>
-<pagination-controls (pageChange)="p = $event" class="float-right mt-3"></pagination-controls>
+<ng-container *ngIf="!loading && (!dataArray || dataArray.length === 0)">
+  <h3 style="color:red">Some error occurred</h3>
+  <p>{{error}}</p>
+</ng-container>
+<pagination-controls (pageChange)="p = $event" class="float-right mt-5"></pagination-controls>
 </div>
